format only spaces